@@ -27,4 +27,5 @@ package haxe.extern;
 	argument expressions are bound to a local variable.
 **/
 @:forward
+@:analyzer(as_var)
 abstract AsVar<T>(T) from T to T {}
